<resources>
    <string name="app_name">Submission Android Intermediate</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_tambah_story">Tambah Story</string>
    <string name="txt_daftarkan_dirimu_ndan_bagikan_ceritamu">Daftarkan Dirimu\nDan Bagikan Ceritamu</string>
    <string name="txt_label_nama">Nama</string>
    <string name="txt_hint_nama">Nama...</string>
    <string name="txt_label_email">Email</string>
    <string name="txt_label_password">Password</string>
    <string name="txt_hint_masukkan_password">Masukkan password...</string>
    <string name="txt_label_konfirmasi_password">Konfirmasi Password</string>
    <string name="txt_hint_konfirmasi_password">Konfirmasi password...</string>
    <string name="txt_label_btn_registrasi">Registrasi</string>
    <string name="txt_atau">- Atau -</string>
    <string name="txt_login">Login</string>
    <string name="txt_sign_in_dan_nbagikan_ceritamu">Sign In Dan\nBagikan Ceritamu</string>
    <string name="txt_label_btn_sign_in">Sign In</string>
    <string name="txt_registrasi">Registrasi</string>
    <string name="title_hint_masukkan_deskripsi">Masukkan Deskripsi...</string>
    <string name="title_label_deskripsi">Deskripsi</string>
    <string name="title_label_upload_foto">Upload Foto</string>
    <string name="txt_gambar_story">Gambar story</string>
    <string name="txt_label_btn_tambah_story">Tambah Story</string>
    <string name="txt_pick_image">Pick Image</string>
    <string name="txt_switch_camera">Switch Camera</string>
    <string name="txt_upload_dari">Upload Dari:</string>
    <string name="txt_close_dialog">Close dialog</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_gallery">Gallery</string>
    <string name="txt_logout">Logout</string>
    <string name="retry">Retry</string>
    <string name="error_get_data_please_try_again">Error get data please try again!</string>
    <string name="title_activity_maps_story">MapsStoryActivity</string>
    <string name="txt_map_view_story">Map view story</string>
</resources>