<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <TextView
                android:id="@+id/txt_title_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/work_sans_bold"
                android:lineHeight="35dp"
                android:text="@string/txt_daftarkan_dirimu_ndan_bagikan_ceritamu"
                android:textColor="@color/color_black"
                android:textSize="26sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_label_nama"
                android:layout_marginTop="40dp"
                android:textAlignment="textStart"
                android:textColor="@color/color_black"/>

            <EditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"
                android:textSize="12sp"
                android:hint="@string/txt_hint_nama"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_label_email"
                android:layout_marginTop="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/color_black"/>

            <com.dicoding.submission_intermediate_storyapp2.ui.custom_ui.CustomEmailEditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_label_password"
                android:layout_marginTop="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/color_black"/>

            <com.dicoding.submission_intermediate_storyapp2.ui.custom_ui.CustomPasswordEditText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/txt_hint_masukkan_password"
                android:background="@drawable/bg_edit_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_label_konfirmasi_password"
                android:layout_marginTop="16dp"
                android:textAlignment="textStart"
                android:textColor="@color/color_black"/>

            <com.dicoding.submission_intermediate_storyapp2.ui.custom_ui.CustomPasswordEditText
                android:id="@+id/ed_register_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/txt_hint_konfirmasi_password"
                android:background="@drawable/bg_edit_text" />

            <com.dicoding.submission_intermediate_storyapp2.ui.custom_ui.CustomButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txt_label_btn_registrasi"
                android:enabled="false" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/work_sans_light"
                android:text="@string/txt_atau"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/color_dark_grey" />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/txt_login"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textColor="@color/color_dark_grey" />



        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_black_transparent" />

        <ProgressBar
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

</RelativeLayout>