<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_rounded_rect_whites">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="34dp"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_upload_dari"
            android:textSize="18sp"
            android:fontFamily="@font/work_sans_semi_bold"/>

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/txt_close_dialog" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_grey"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"/>

    <LinearLayout
        android:id="@+id/ll_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="34dp"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            android:contentDescription="@string/txt_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_camera"
            android:layout_marginStart="24dp"/>

    </LinearLayout>


    <View
        android:id="@+id/dividerLanguage"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_grey"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"/>

    <LinearLayout
        android:id="@+id/ll_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="34dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_gallery"
            android:contentDescription="@string/txt_gallery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_gallery"
            android:layout_marginStart="24dp"/>

    </LinearLayout>




</LinearLayout>